--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
+    total: {{ .Count }}<br />
     {{range .Entries}}
-    -> {{ . }}<br />
+    -> {{ .Folder }} {{ .Name }} {{.URL }}<br />
     {{end}}
 </body>
